# test

./: BUGFIXES_EXPLANATION.md  CMakeLists.txt  main.cu
data/: test.txt
inc/: common.h  gpuMemoryAllocation.cuh  graph.h  helpers.cuh
src/: common.cpp  gpuMemoryAllocation.cu  graph.cpp  helpers.cu
utils/: cuda_utils.cuh
